--- a/index.html
+++ b/index.html
@@ -1,2 +1,85 @@
 <!DOCTYPE html>
-<strong>Hello World!</strong>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>My Website!</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <style>
+        .social-icons {
+            font-size: 30px; /* Size of the icon */
+            margin: 10px;
+            display: flex; /* Use flexbox for alignment */
+            justify-content: center; /* Center align the icons */
+        }
+        a {
+            text-decoration: none;
+            color: #0e76a8; /* LinkedIn blue color */
+            margin: 0 10px; /* Space between icons */
+        }
+        a:hover {
+            color: #0077b5; /* Slightly lighter blue on hover */
+        }
+        .email-icon {
+            color: #333; /* Email icon color (default black) */
+        }
+        .email-icon:hover {
+            color: #555; /* Slightly lighter color on hover */
+        }
+    </style>
+</head>
+
+<body>
+    <!-- LINKS -->
+    <div>
+        <p style="font-family:arial; color:steelblue; font-size:24px; text-align:center">
+            <a href="posts.html">Posts</a>&nbsp;&nbsp;&nbsp;
+            <a href="portfolio.html">Portfolio</a>&nbsp;&nbsp;&nbsp;
+            <a href="techblogs.html">Tech Blogs</a>&nbsp;&nbsp;&nbsp;
+            <a href="techpodcasts.html">Tech Podcasts</a>&nbsp;&nbsp;&nbsp;
+            <a href="techytchannels.html">Tech YouTube Channels</a>&nbsp;&nbsp;&nbsp;
+            <a href="othertechtools.html">Other Tech Tools</a>&nbsp;&nbsp;&nbsp;
+            <a href="veteranrsrcs.html">Veteran Resources</a>
+        </p>
+    </div>
+<br>
+<br>
+    <!-- SELFIE -->
+     <div>
+        <p>
+            <center>
+                <img src="./images/profile_pic.png" alt="Example Image">
+            </center>
+        </p>
+    </div>
+<br>
+    <!-- GREETING -->
+    <div>
+        <p style="font-family:arial; color:black; font-size:16px; text-align:center">
+            Howdy! Thank you for visiting my website.
+            <br>
+            <br>
+            The goal of this site is to document my I.T. journey and share resources.
+            <br>
+            <br>
+            I welcome invitations to connect with fellow professionals, like-minded individuals, and those interested in exploring opportunities for collaboration or networking.
+            <br>
+            <br>
+            Feel free to reach out. I look forward to connecting with you!
+        </p>
+    </div>
+    <!-- SOCIAL ICONS -->
+    <div class="social-icons">
+        <!-- LinkedIn Icon -->
+        <a href="https://www.linkedin.com/in/moisesgodinez" target="_blank" title="LinkedIn">
+            <i class="fab fa-linkedin"></i>
+        </a>
+        <!-- Email Icon -->
+        <!--<a href="mailto:your-email@example.com" title="Email" class="email-icon">
+            <i class="fas fa-envelope"></i>-->
+        </a>
+    </div>
+</body>
+</html>
+
+<!--<a href="https://www.credly.com/badges/6eab8ae5-4bf1-4c2d-a68f-70b89b74f566/linked_in_profile" target="_blank">CCNA</a>-->
