--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
      <div>
         <p>
             <center>
-                <img src="./images/profile_pic.png" alt="Example Image">
+                <img src="profile_pic.png" alt="ME">
             </center>
         </p>
     </div>
