--- a/techblogs.html
+++ b/techblogs.html
@@ -14,13 +14,19 @@
 <body>
 <!--LINKS-->
 <div>
-    <p style="font-family:arial; color:steelblue; font-size:24px; text-align:center">
-        <a href="index.html">Home</a>&nbsp;&nbsp;&nbsp;
-        <a href="posts.html">Posts</a>&nbsp;&nbsp;&nbsp;
-        <a href="portfolio.html">Portfolio</a>&nbsp;&nbsp;&nbsp;
-        <a href="techpodcasts.html">Tech Podcasts</a>&nbsp;&nbsp;&nbsp;
-        <a href="techytchannels.html">Tech YouTube Channels</a>&nbsp;&nbsp;&nbsp;
-        <a href="othertechtools.html">Other Tech Tools</a>&nbsp;&nbsp;&nbsp;
+    <p style="font-family:arial; color:steelblue; font-size:20px; text-align:left">
+        <a href="index.html">Home</a>
+        <br>
+        <a href="posts.html">Posts</a>
+        <br>
+        <a href="portfolio.html">Portfolio</a>
+        <br>
+        <a href="techpodcasts.html">Tech Podcasts</a>
+        <br>
+        <a href="techytchannels.html">Tech YouTube Channels</a>
+        <br>
+        <a href="othertechtools.html">Other Tech Tools</a>
+        <br>
         <a href="veteranrsrcs.html">Veteran Resources</a>
     </p>
 </div>
@@ -93,7 +99,7 @@
     </p>
     <!--DESCRIPTION-->
     <p style="font-family:arial; color:black; font-size:16px">
-        M3 offers support for those learning new computing skills. M3's goal is to hvae many different topics from the IT industry covered.
+        M3 offers support for those learning new computing skills. M3's goal is to have many different topics from the IT industry covered.
     </p>
 </div>
 
