--- a/posts.html
+++ b/posts.html
@@ -14,19 +14,25 @@
 <body>
     <!--LINKS-->
     <div>
-        <p style="font-family:arial; color:steelblue; font-size:24px; text-align:center">
-            <a href="index.html">Home</a>&nbsp;&nbsp;&nbsp;
-            <a href="portfolio.html">Portfolio</a>&nbsp;&nbsp;&nbsp;
-            <a href="techblogs.html">Tech Blogs</a>&nbsp;&nbsp;&nbsp;
-            <a href="techpodcasts.html">Tech Podcasts</a>&nbsp;&nbsp;&nbsp;
-            <a href="techytchannels.html">Tech YouTube Channels</a>&nbsp;&nbsp;&nbsp;
-            <a href="othertechtools.html">Other Tech Tools</a>&nbsp;&nbsp;&nbsp;
+        <p style="font-family:arial; color:steelblue; font-size:20px; text-align:left">
+            <a href="index.html">Home</a>
+            <br>
+            <a href="portfolio.html">Portfolio</a>
+            <br>
+            <a href="techblogs.html">Tech Blogs</a>
+            <br>
+            <a href="techpodcasts.html">Tech Podcasts</a>
+            <br>
+            <a href="techytchannels.html">Tech YouTube Channels</a>
+            <br>
+            <a href="othertechtools.html">Other Tech Tools</a>
+            <br>
             <a href="veteranrsrcs.html">Veteran Resources</a>
         </p>
     </div>
 <br>
     <div>
-        <p style="font-family:arial; color:black; font-size:36px; text-align:center">
+        <p style="font-family:arial; color:black; font-size:36px; text-align:left">
             COMING SOON!            
         </p>
     </div>
