--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <!-- SELFIE -->
          <div>
             <p>
-                <img src="./profile_pic.png" alt="Example Image">
+                <img src="./images/profile_pic.png" alt="Example Image">
             </p>
         </div>
         <!-- GREETING -->
