--- a/portfolio/fsna.html
+++ b/portfolio/fsna.html
@@ -33,7 +33,7 @@
     <body>
         <!-- FSNA IMAGE -->
         <p style="font-family:arial; color:black; font-size:36px;">Full Stack Network Associate Project</p>
-            <img src="../images/fsna.png">
+        <img src="../images/fsna.png" srcset="small-image.jpg 400w, medium-image.jpg 800w">
         <!-- OBJECTIVE -->
         <p style="font-family:arial; font-weight:bold; color:black; font-size:20px;">
             Objectives
