--- a/portfolio/fsna.html
+++ b/portfolio/fsna.html
@@ -33,7 +33,7 @@
     <body>
         <!-- FSNA IMAGE -->
         <p style="font-family:arial; color:black; font-size:36px;">Full Stack Network Associate Project</p>
-        <img src="../images/fsna.png" srcset="../images/fsna.png 400w, ../images/fsna.png 800w">
+        <img src="../images/fsna.png" style="max-width: 100%; height: auto;">
         <!-- OBJECTIVE -->
         <p style="font-family:arial; font-weight:bold; color:black; font-size:20px;">
             Objectives
