--- a/index.html
+++ b/index.html
@@ -79,9 +79,9 @@
         <p class="limited-width">Feel free to reach out. I look forward to connecting with you!</p>
         <p class="limited-width">
             <span id="dots">...</span><span id="more">
-                <br>This is my read more section.
+                <br>My philosophy is “aimed at the sincere and honest development of one’s potential” and my commitment to continuous learning is targeted at helping individuals, teams, and organizations achieve successful outcomes by leveraging information technology.
                 <br>
-                <br>This section continues my read more about me section.
+                <br>My passion for technology has driven me to pursue opportunities to expand my technical acumen, most recently earning the <a href="https://cs.lpi.org/caf/Xamman/certification/verify/LPI000600912/d8fecvn7x5" target="_blank">Linux Essentials</a> certification from the <a href="https://lpi.org" target="_blank">Linux Professional Institute (LPI)</a>, and actively pursuing an <a href="https://pythoninstitute.org/pcep" target="_blank">Entry-Level Python Programmer</a> certification from the <a href="https://pythoninstitute.org/" target="_blank">Python Institute</a>.
             </span>
         </p>
         <a href="javascript:void(0);" onclick="toggleReadMore()" id="readMoreBtn">Read More</a>
@@ -91,6 +91,12 @@
     <div class="social-icons">
         <a href="https://www.linkedin.com/in/moisesgodinez" target="_blank" title="LinkedIn">
             <i class="fab fa-linkedin"></i>
+        </a>
+        <a href="https://www.github.com/frmdwtr" target="_blank" title="GitHub">
+            <i class="fa-brands fa-github"></i>
+        </a>
+        <a href="certifications.html" title="Certifications">
+            <i class="fa-solid fa-award"></i>
         </a>
     </div>
     <!-- LINKS -->
