--- a/certifications.html
+++ b/certifications.html
@@ -3,19 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Posts</title>
+    <title>Technical Certifications</title>
     <style>
         a {
             text-decoration: none; /* Remove underline from all hyperlinks */
             color: steelblue; /* Optional: Set your desired link color */
         }
+        .link-block a:hover {
+            text-decoration: underline;
+        }
     </style>
 </head>
 <body>
     <!--LINKS-->
-    <div>
+    <div class="link-block">
         <p style="font-family:arial; color:steelblue; font-size:20px; text-align:left">
             <a href="index.html">Home</a>
+            <br>
+            <a href="posts.html">Posts</a>
             <br>
             <a href="portfolio.html">Portfolio</a>
             <br>
@@ -30,13 +35,27 @@
             <a href="veteranrsrcs.html">Veteran Resources</a>
         </p>
     </div>
-<br>
-    <div>
-        <p style="font-family:arial; color:black; font-size:36px; text-align:left">
-            COMING SOON!            
+    <div class="link-block">
+        <p style="font-family:arial; color:black; font-size:20px; text-align:left">
+            Active Certifications
+        </p>
+        <p style="font-family:arial; color:black; font-size:16px; text-align:left">
+            <a href="https://www.credly.com/badges/6eab8ae5-4bf1-4c2d-a68f-70b89b74f566" target="_blank">Cisco Certified Network Associate (CCNA)</a>
+            <br>
+            <br>
+            <a href="https://cs.lpi.org/caf/Xamman/certification/verify/LPI000600912/d8fecvn7x5" target="_blank">Linux Essentials</a>
         </p>
     </div>
-<!--MORE CONTENT HERE-->
-<!--<a href="https://www.credly.com/badges/6eab8ae5-4bf1-4c2d-a68f-70b89b74f566/linked_in_profile" target="_blank">CCNA</a>-->
+    <div class="link-block">
+        <p style="font-family:arial; color:black; font-size:20px; text-align:left">
+            Expired Certifications
+        </p>
+        <p style="font-family:arial; color:black; font-size:16px; text-align:left">
+            <a href="https://www.credly.com/badges/1d79daa3-5dc9-47f8-a48e-34392f851f74" target="_blank">CompTIA A+</a>
+            <br>
+            <br>
+            Cisco Certified Entry Networking Technician (CCENT) <sub>Issued June 2019 &middot Expired June 2022</sub>
+        </p>
+    </div>
 </body>
 </html>
