--- a/portfolio.html
+++ b/portfolio.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>My Portfolio</title>
+        <title>Project Portfolio</title>
         <style>
         a {
             text-decoration: none; /* Remove underline from all hyperlinks */
@@ -31,6 +31,25 @@
         </style>
     </head>
     <body>
+        <!-- LINKS -->
+        <div class="link-block">
+            <p style="font-family:arial; color:steelblue; font-size:20px; text-align:left;">
+                <a href="index.html">Home</a>
+                <br>
+                <a href="posts.html">Posts</a>
+                <br>
+                <a href="techblogs.html">Tech Blogs</a>
+                <br>
+                <a href="techpodcasts.html">Tech Podcasts</a>
+                <br>
+                <a href="techytchannels.html">Tech YouTube Channels</a>
+                <br>
+                <a href="othertechtools.html">Other Tech Tools</a>
+                <br>
+                <a href="veteranrsrcs.html">Veteran Resources</a>
+            </p>
+        </div>
+        <br>
         <!-- FULL STACK NETWORK PROFESSIONAL-->
         <div class="link-block">
             <p style="font-family:arial; color:steelblue; font-size:20px; text-align:left;">
@@ -74,24 +93,6 @@
             </p>
             <p class="limited-width" style="font-family:arial; color:black; font-size:16px;">
                 Deployed a network with two managed switches with three VLANs, voice QoS, inter-VLAN routing for three VLANs, a default route to the Internet, VoIP phones and service via Internet-based VoIP provider, a secure management plane and network perimeter, and a corporate wireless SSID.
-            </p>
-        </div>
-        <!-- LINKS -->
-        <div class="link-block">
-            <p style="font-family:arial; color:steelblue; font-size:20px; text-align:left;">
-                <a href="index.html">Home</a>
-                <br>
-                <a href="posts.html">Posts</a>
-                <br>
-                <a href="techblogs.html">Tech Blogs</a>
-                <br>
-                <a href="techpodcasts.html">Tech Podcasts</a>
-                <br>
-                <a href="techytchannels.html">Tech YouTube Channels</a>
-                <br>
-                <a href="othertechtools.html">Other Tech Tools</a>
-                <br>
-                <a href="veteranrsrcs.html">Veteran Resources</a>
             </p>
         </div>
     </body>
